--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - Lincon's Portfolio</title>
+  <title>Index - Partho's Portfolio</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -126,11 +126,8 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p align="justify">I am a dedicated microbiologist with a strong academic foundation, holding both a Master of Science (MSc) and a Bachelor of Science (BSc) in Microbiology from Jagannath University, Dhaka, Bangladesh.
-
-I am pursuing a PhD in Microbiology at Texas A&M University and working in Dr. Koch's lab. My research focuses on the dynamic regulation of Type IV Pili in <i>Pseudomonas aeruginosa</i>, aiming to uncover critical insights into bacterial behavior and pathogenesis.
-
-As a self-motivated and dedicated learner, I am passionate about advancing our understanding of microbiology. My long-term goal is to make meaningful contributions to the scientific community and address global challenges through innovative microbiological research. </p>
+        <p align="justify">I am a Graduate Research Assistant  at Texas Alearning and  robotics. I am  passionate about learning fundamental computer science algorithms, including data structures, dynamic programming, and game theory. I have  experience working in programming languages, including Python, Java, C and C++.
+I love to make water color and acrylic painting. In addition&M University. My research focuses on deep learning algorithms, computer vision,  machine to this, I like to play chess and have a strong fascination on gardening. Besides this, I love to  travel and thereby explore different  places.</p>
       </div><!-- End Section Title -->
 
    
