--- a/index.html
+++ b/index.html
@@ -175,44 +175,33 @@ I love to make water color and acrylic painting. In addition&M University. My re
             </div><!-- Edn Resume Item -->
            
             <div class="resume-item">
-              <h4>Master of Science in Microbiology</h4>
-              <h5>2020-2021</h5>
+              <h4>Master of Science in CSE</h4>
+              <h5>2018-2021</h5>
               <p><em>Jagannath University, Dhaka, Bangladesh</em></p>
-              <p>CGPA 3.98 out of a 4.00 scale</p>
+              <p>CGPA 3.85 out of a 4.00 scale</p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Bachelor of Science in Microbiology</h4>
-              <h5>2016 - 2020</h5>
+              <h4>Bachelor of Science in CSE</h4>
+              <h5>2013 - 2018</h5>
               <p><em>Jagannath University, Dhaka, Bangladesh</em></p>
-              <p>CGPA 3.70 out of a 4.00 scalea</p>
+              <p>CGPA 3.79 out of a 4.00 scalea</p>
             </div><!-- Edn Resume Item -->
   
-          <h3 class="resume-title">Teaching Experience</h3>
+          <h3 class="resume-title">Experience</h3>
             <div class="resume-item pb-0">
               <h4>Graduate Teaching Assistant</h4>
-              <p><em>Department of Biology, Texas A&M University, College Station, TX</em></p>
+              <p><em>Department of Biological And Agricultural Engineering, Texas A&M University, Colege Station , TX</em></p>
+              </em></p>
               <ul>
-               <li>Spring 2025 – BIOL – </li> 
-               <li>Fall 2024 - BIOL 111 – Introductory Biology I</li>
+               <li>Fall 2025 – BIOL – </li> 
             </div><!-- Edn Resume Item -->
 
           <div class="resume-item pb-0">
-              <h4>Graduate Teaching Assistant</h4>
-              <p><em>Department of Biology, Indiana State University, Terre Haute, IN</em></p>
-              <ul>
-                <li>Spring 2024 – BIOL 374 – Cellular and Molecular Biology Laboratory</li>
-                <li>Fall 2023 - BIOL 274 – Introduction to Microbiology Laboratory</li>
+              <h4>Lecturer</h4>
+              <p><em>Department of CSE, Bangladesh University of Business and Tecgnology (BUBT)<ul>
+                <li>Janury 2022 – June 2024</li>
             </div><!-- Edn Resume Item -->
-
-            <div class="resume-item pb-0">
-              <h4>Trainer and Instructor</h4>
-              <p><em>Genomic Data Science Center, Center for Health Innovation, Research, Action and Learning - Bangladesh (CHIRAL Bangladesh)</em></p>
-              <h5></h5>May 13, 2022 - May 31, 2022</h5>
-              <ul>
-                <li>Conducted a 10-day long course entitled by “Bioinformatics 101: A Gentle Introduction to Bioinformatics” as a trainer.</li>
-            </div><!-- Edn Resume Item -->
-         </div>
           
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
             <h3 class="resume-title">Research Experience</h3>
