--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <a href="index.html" class="logo d-flex align-items-center justify-content-center">
       <!-- Uncomment the line below if you also wish to use an image logo -->
       <!-- <img src="assets/img/logo.png" alt=""> -->
-      <h1 class="sitename">Lincon Mazumder</h1>
+      <h1 class="sitename">Partho Ghose</h1>
     </a>
 
     <div class="social-links text-center">
@@ -106,11 +106,11 @@
    <!-- Hero Section -->
     <section id="hero" class="hero section dark-background">
 
-      <img src="assets/img/hero-bg.jpg" alt="" data-aos="fade-in" class="">
+      <img src="assets/img/hero-bg.JPG" alt="" data-aos="fade-in" class="">
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
-        <h2>Lincon Mazumder</h2>
-        <p>I love <span class="typed" data-typed-items="Microbiology!"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <h2>Partho Ghose</h2>
+        <p>I love <span class="typed" data-typed-items="Nuture!"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
@@ -126,8 +126,18 @@
       <!-- Section Title -->
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
-        <p align="justify">I am a Graduate Research Assistant  at Texas Alearning and  robotics. I am  passionate about learning fundamental computer science algorithms, including data structures, dynamic programming, and game theory. I have  experience working in programming languages, including Python, Java, C and C++.
-I love to make water color and acrylic painting. In addition&M University. My research focuses on deep learning algorithms, computer vision,  machine to this, I like to play chess and have a strong fascination on gardening. Besides this, I love to  travel and thereby explore different  places.</p>
+        <p align="justify">
+         I am a **Graduate Research Assistant** at **Texas A&M University**, specializing in 
+         **deep learning algorithms**, **computer vision**,  and **machine learning**. 
+         I am passionate about mastering **fundamental computer science algorithms**, including **data structures**, 
+         **dynamic programming**, and **game theory**. With experience in multiple programming languages such as **Python**, **Java**,
+         **C**, and **C++**, I am equipped to tackle complex
+         computational challenges. Beyond academics, I have a deep love for **watercolor and acrylic painting**, 
+         finding joy in expressing creativity through art. 
+         I am also an avid **chess player** and have a strong fascination with **gardening**. Additionally, 
+         I cherish opportunities to **travel** and explore new places, embracing diverse cultures and experiences.  
+
+       </p>
       </div><!-- End Section Title -->
 
    
@@ -151,27 +161,27 @@ I love to make water color and acrylic painting. In addition&M University. My re
             <h3 class="resume-title">Summary</h3>
 
             <div class="resume-item pb-0">
-              <h4>Lincon Mazumder</h4>
-              <p><em>Graduate Student (PhD in Microbiology) at the Department of Biology at Texas A&M University</em></p>
+              <h4>Parho Ghose</h4>
+              <p><em>Graduate Student (PhD in Biologcal and Agricultural Engineering)  at Texas A&M University</em></p>
               <ul>
-                <li>BSBW 412, Texas A&M University, College Station, TX 77843</li>
-                <li>(xxx) 263 5208</li>
-                <li>lincon@tamu.edu</li>
+                <li>Scoate 227, Texas A&M University, College Station, TX 77843</li>
+                <li>(xxx) 358 0195</li>
+                <li>partho.ghose@tamu.edu</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Doctor of Philosophy in Microbiology </h4>
-              <h5>Summer 2024 - Now</h5>
+              <h4>Doctor of Philosophy in Biologcal and Agricultural Engineering </h4>
+              <h5>Fall 2024 - Now</h5>
               <p><em>Texas A&M University, College Station, TX, USA</em></p>
-             <p>CGPA 3.50 out of a 4.00 scale</p>
+             <p>CGPA 3.66 out of a 4.00 scale</p>
             </div><!-- Edn Resume Item -->
 
             <div class="resume-item">
-              <h4>Doctor of Philosophy in Microbiology </h4>
-              <h5>Fall 2023 - Spring 2024</h5>
-              <p><em>Indiana State University, Terre Haute, IN, USA</em></p>
+              <h4>Doctor of Philosophy in CSE </h4>
+              <h5>Fall 2024 - Fall 2024</h5>
+              <p><em> University of Idaho, Moscow, ID, USA</em></p>
             </div><!-- Edn Resume Item -->
            
             <div class="resume-item">
@@ -188,14 +198,7 @@ I love to make water color and acrylic painting. In addition&M University. My re
               <p>CGPA 3.79 out of a 4.00 scalea</p>
             </div><!-- Edn Resume Item -->
   
-          <h3 class="resume-title">Experience</h3>
-            <div class="resume-item pb-0">
-              <h4>Graduate Teaching Assistant</h4>
-              <p><em>Department of Biological And Agricultural Engineering, Texas A&M University, Colege Station , TX</em></p>
-              </em></p>
-              <ul>
-               <li>Fall 2025 – BIOL – </li> 
-            </div><!-- Edn Resume Item -->
+          <h3 class="resume-title">Teaching Experience</h3>
 
           <div class="resume-item pb-0">
               <h4>Lecturer</h4>
@@ -207,21 +210,13 @@ I love to make water color and acrylic painting. In addition&M University. My re
             <h3 class="resume-title">Research Experience</h3>
             <div class="resume-item">
               <h4>Graduate Research Assistant</h4>
-              <h5>November 2024 - Present</h5>
-              <p><em>Dr. Matthias Koch’s Lab, Department of Biology, Texas A&M University</em></p>
+              <h5>Agust 2024 - Present</h5>
+              <p><em>Dr. Azlan Zahid’s Lab, Department of Biologcal and Agricultural Engineering, Texas A&M University</em></p>
              <ul>
                 <li>Studying the dynamic regulation of Type IV Pili in <i>Pseudomonas aeruginosa</i>.</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
-            <div class="resume-item">
-              <h4>Rotation Student</h4>
-              <h5>September 2024 to October 2024</h5>
-              <p><em>Dr. Joseph Sorg’s Lab, Department of Biology, Texas A&M University</em></p>
-              <ul>
-                <li>My research in Dr. Sorg’s lab was focused on preparing a mutant library of <i>Clostridioides difficile</i> comprising approximately 4000 mutants. As one of the pioneer students working on this project, my goal was to create a universal protocol to help us attain the aim.</li>
-              </ul>
-            </div><!-- Edn Resume Item -->
 
              <div class="resume-item">
               <h4>Student Research Assistant</h4>
