--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
         <h2>Partho Ghose</h2>
-        <p>I love <span class="typed" data-typed-items="Nuture!"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
+        <p>I love to <span class="typed" data-typed-items=" explore  the unexplored (Nuture)!"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span><span class="typed-cursor typed-cursor--blink" aria-hidden="true"></span></p>
       </div>
 
     </section><!-- /Hero Section -->
@@ -197,7 +197,8 @@
               <p><em>Jagannath University, Dhaka, Bangladesh</em></p>
               <p>CGPA 3.79 out of a 4.00 scalea</p>
             </div><!-- Edn Resume Item -->
-  
+         </div>
+         
           <h3 class="resume-title">Teaching Experience</h3>
 
           <div class="resume-item pb-0">
