--- a/index.html
+++ b/index.html
@@ -205,6 +205,18 @@
               <h4>Lecturer</h4>
               <p><em>Department of CSE, Bangladesh University of Business and Tecgnology (BUBT)<ul>
                 <li>Janury 2022 – June 2024</li>
+               <u1>As a Lecturer in the Department of Computer Science and Engineering at BUBT, I was responsible for delivering high-quality education to undergraduate students, fostering critical thinking, and promoting academic excellence. My primary responsibilities included:
+
+- Designing and delivering engaging lectures on core Computer Science and Engineering subjects.
+- Developing and updating course materials, including syllabi, lecture notes, and assignments, to align with modern industry trends and academic standards.
+- Supervising undergraduate research projects and guiding students in developing technical and analytical skills.
+- Evaluating student performance through assessments, exams, and coursework while providing constructive feedback.
+- Organizing and participating in academic events, workshops, and seminars to promote knowledge-sharing and innovation.
+- Collaborating with fellow faculty members on curriculum development and departmental initiatives.
+- Mentoring students to support their academic and professional growth.
+
+During my tenure, I also contributed to fostering a collaborative and inclusive learning environment, emphasizing both theoretical foundations and practical applications to prepare students for future challenges in the tech industry.
+</u1>
             </div><!-- Edn Resume Item -->
           
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
