--- a/index.html
+++ b/index.html
@@ -207,13 +207,13 @@
                 <li>Janury 2022 – June 2024</li>
                <u1>As a Lecturer in the Department of Computer Science and Engineering at BUBT, I was responsible for delivering high-quality education to undergraduate students, fostering critical thinking, and promoting academic excellence. My primary responsibilities included:
 
-- Designing and delivering engaging lectures on core Computer Science and Engineering subjects.
-- Developing and updating course materials, including syllabi, lecture notes, and assignments, to align with modern industry trends and academic standards.
-- Supervising undergraduate research projects and guiding students in developing technical and analytical skills.
-- Evaluating student performance through assessments, exams, and coursework while providing constructive feedback.
-- Organizing and participating in academic events, workshops, and seminars to promote knowledge-sharing and innovation.
-- Collaborating with fellow faculty members on curriculum development and departmental initiatives.
-- Mentoring students to support their academic and professional growth.
+<li>- Designing and delivering engaging lectures on core Computer Science and Engineering subjects.</li>
+<li>- Developing and updating course materials, including syllabi, lecture notes, and assignments, to align with modern industry trends and academic standards.</li>
+<li>- Supervising undergraduate research projects and guiding students in developing technical and analytical skills.</li>
+<li>- Evaluating student performance through assessments, exams, and coursework while providing constructive feedback.</li>
+<li>- Organizing and participating in academic events, workshops, and seminars to promote knowledge-sharing and innovation.</li>
+<li>- Collaborating with fellow faculty members on curriculum development and departmental initiatives.</li>
+<li>- Mentoring students to support their academic and professional growth.</li>
 
 During my tenure, I also contributed to fostering a collaborative and inclusive learning environment, emphasizing both theoretical foundations and practical applications to prepare students for future challenges in the tech industry.
 </u1>
