--- a/index.html
+++ b/index.html
@@ -127,15 +127,15 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>About</h2>
         <p align="justify">
-         I am a **Graduate Research Assistant** at **Texas A&M University**, specializing in 
-         **deep learning algorithms**, **computer vision**,  and **machine learning**. 
-         I am passionate about mastering **fundamental computer science algorithms**, including **data structures**, 
-         **dynamic programming**, and **game theory**. With experience in multiple programming languages such as **Python**, **Java**,
-         **C**, and **C++**, I am equipped to tackle complex
-         computational challenges. Beyond academics, I have a deep love for **watercolor and acrylic painting**, 
+         I am a Graduate Research Assistant at Texas A&M University, specializing in 
+         deep learning algorithms, computer vision,  and machine learning. 
+         I am passionate about mastering fundamental computer science algorithms, including data structures, 
+         dynamic programming, and game theory. With experience in multiple programming languages such as Python, Java,
+         C, and C++, I am equipped to tackle complex
+         computational challenges. Beyond academics, I have a deep love for watercolor and acrylic painting, 
          finding joy in expressing creativity through art. 
-         I am also an avid **chess player** and have a strong fascination with **gardening**. Additionally, 
-         I cherish opportunities to **travel** and explore new places, embracing diverse cultures and experiences.  
+         I am also an avid chess player and have a strong fascination with gardening. Additionally, 
+         I cherish opportunities to travel and explore new places, embracing diverse cultures and experiences.  
 
        </p>
       </div><!-- End Section Title -->
