--- a/index.html
+++ b/index.html
@@ -226,7 +226,10 @@ During my tenure, I also contributed to fostering a collaborative and inclusive 
               <h5>Agust 2024 - Present</h5>
               <p><em>Dr. Azlan Zahid’s Lab, Department of Biologcal and Agricultural Engineering, Texas A&M University</em></p>
              <ul>
-                <li>Studying the dynamic regulation of Type IV Pili in <i>Pseudomonas aeruginosa</i>.</li>
+                <li>Currently, I am engaged in research at Dr. Azlan Zahid’s Lab, focusing on 3D reconstruction of plant phenotyping 
+                 and the application of Artificial Intelligence to optimize resource usage in controlled environment agriculture. 
+                 My work involves leveraging advanced AI models and computational techniques to enhance precision agriculture practices, 
+                 improve resource efficiency, and address critical challenges in sustainable food production systems.</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
