--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
         <div class="row">
 
-          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+          <div class="col-lg-3" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Summary</h3>
 
             <div class="resume-item pb-0">
@@ -203,28 +203,28 @@
           
           <div class="resume-item pb-0">
               <h4>Lecturer</h4>
-              <p><em>Department of CSE, Bangladesh University of Business and Tecgnology (BUBT)<ul>
+              <p><em>Department of CSE, Bangladesh University of Business and Tecgnology (BUBT)</em></p>
                 <li>Janury 2022 – June 2024</li>
                <u1>As a Lecturer in the Department of Computer Science and Engineering at BUBT,
                 I was responsible for delivering high-quality education to undergraduate students, 
                 fostering critical thinking, and promoting academic excellence. My primary responsibilities included:
 
-                     <li>- Designing and delivering engaging lectures on core Computer Science and Engineering subjects.</li>
-                     <li>- Developing and updating course materials, including syllabi, lecture notes, and assignments, 
+                     <li> Designing and delivering engaging lectures on core Computer Science and Engineering subjects.</li>
+                     <li> Developing and updating course materials, including syllabi, lecture notes, and assignments, 
                       to align with modern industry trends and academic standards.</li>
-                     <li>- Supervising undergraduate research projects and guiding students in developing technical and 
+                     <li> Supervising undergraduate research projects and guiding students in developing technical and 
                       analytical skills.</li>
-                     <li>- Evaluating student performance through assessments, exams, and coursework while providing 
+                     <li> Evaluating student performance through assessments, exams, and coursework while providing 
                       constructive feedback.</li>
-                     <li>- Organizing and participating in academic events, workshops, and seminars to promote 
+                     <li> Organizing and participating in academic events, workshops, and seminars to promote 
                       knowledge-sharing and innovation.</li>
-                     <li>- Collaborating with fellow faculty members on curriculum development 
+                     <li> Collaborating with fellow faculty members on curriculum development 
                       and departmental initiatives.</li>
-                     <li>- Mentoring students to support their academic and professional growth.</li>
+                     <li> Mentoring students to support their academic and professional growth.</li>
 
-                During my tenure, I also contributed to fostering a collaborative and inclusive learning environment, 
+               <p> During my tenure, I also contributed to fostering a collaborative and inclusive learning environment, 
                 emphasizing both theoretical foundations and practical applications to prepare students for 
-                future challenges in the tech industry.
+                future challenges in the tech industry.</p>
                </u1>
             </div><!-- Edn Resume Item -->
          
