--- a/index.html
+++ b/index.html
@@ -198,7 +198,8 @@
               <p>CGPA 3.79 out of a 4.00 scalea</p>
             </div><!-- Edn Resume Item -->
          </div>
-         
+
+         <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
           <h3 class="resume-title">Teaching Experience</h3>
           
           <div class="resume-item pb-0">
