--- a/index.html
+++ b/index.html
@@ -207,9 +207,9 @@
               <p><em>Department of CSE, Bangladesh University of Business and Tecgnology (BUBT)</em></p>
                 <li>Janury 2022 – June 2024</li>
                <u1>
-                     As a Lecturer in the Department of Computer Science and Engineering at BUBT,
-                     I was responsible for delivering high-quality education to undergraduate students, 
-                     fostering critical thinking, and promoting academic excellence. My primary responsibilities included:</li>
+                    <p><em> As a Lecturer in the Department of Computer Science and Engineering at BUBT,I was responsible for delivering high-quality 
+                education to undergraduate student fostering critical thinking, and promoting academic excellence. My primary responsibilities included:</em></p> 
+               </li>
                     <u2> <li>Designing and delivering engaging lectures on core Computer Science and Engineering subjects.</li>
                      <li>Developing and updating course materials, including syllabi, lecture notes, and assignments, 
                       to align with modern industry trends and academic standards.</li>
@@ -223,9 +223,9 @@
                       and departmental initiatives.</li>
                      <li>Mentoring students to support their academic and professional growth.</li>
                     </u2>
-                During my tenure, I also contributed to fostering a collaborative and inclusive learning environment, 
+               <p><em>During my tenure, I also contributed to fostering a collaborative and inclusive learning environment, 
                 emphasizing both theoretical foundations and practical applications to prepare students for 
-                future challenges in the tech industry.</u1>
+                future challenges in the tech industry.</em></p> </u1>
               
             </div><!-- Edn Resume Item -->
          
