--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         <h2>Publications</h2>
          <ul id="Navigation">
            <h4>2024</h4>
-        <li class="stretch"> Mahmud, M. R., Tamanna, S. K., Akter, S., <b>Mazumder, L.</b>, Akter, S., Hasan, M. R., Acharjee, M., Esti, I. Z., Islam, M. S., Shihab, M. M. R., Nahian, M., Gulshan, R., Naser, S., & Pirttilä, A. M. (2024). Role of bacteriophages in shaping gut microbial community. Gut Microbes, 16(1). <a href="https://doi.org/10.1080/19490976.2024.2390720">https://doi.org/10.1080/19490976.2024.2390720</a></li>
+        <li class="stretch"> <b></b>Ghose, Partho</b>, Khondokar Oliullah, Md Kawsher Mahbub, Milon Biswas, Kazi Nur Uddin, and Hasan M. Jamil. "Explainable AI assisted heart disease diagnosis through effective feature engineering and stacked ensemble learning." Expert Systems with Applications 265 (2025): 125928. <a href="https://doi.org/10.1016/j.eswa.2024.125928">https://doi.org/10.1016/j.eswa.2024.125928</a></li>
         <h4>2023</h4>
             <li> <b>Mazumder, L.</b>, Shahab, M., Islam, S. et al. An immunoinformatics approach to epitope-based vaccine design against PspA in Streptococcus pneumoniae. J Genet Eng Biotechnol 21, 57 (2023). <a href="https://doi.org/10.1186/s43141-023-00506-9">https://doi.org/10.1186/s43141-023-00506-9</a></li>
             <li> <b>Mazumder</b>, L., Hasan, M. R., Fatema, K., Begum, S., Azad, A. K., & Islam, M. A. (2023). Identification of B and T Cell Epitopes to Design an Epitope-Based Peptide Vaccine against the Cell Surface Binding Protein of Monkeypox Virus: An Immunoinformatics Study. Journal of Immunology Research, 2023, 1–14. <a href="https://doi.org/10.1155/2023/2274415">https://doi.org/10.1155/2023/2274415</a></li>
