--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 
         <div class="row">
 
-          <div class="col-lg-3" data-aos="fade-up" data-aos-delay="400">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Summary</h3>
 
             <div class="resume-item pb-0">
@@ -262,9 +262,9 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Publications</h2>
          <ul id="Navigation">
-           <h4>2024</h4>
-        <li class="stretch"> <b></b>Ghose, Partho</b>, Khondokar Oliullah, Md Kawsher Mahbub, Milon Biswas, Kazi Nur Uddin, and Hasan M. Jamil. "Explainable AI assisted heart disease diagnosis through effective feature engineering and stacked ensemble learning." Expert Systems with Applications 265 (2025): 125928. <a href="https://doi.org/10.1016/j.eswa.2024.125928">https://doi.org/10.1016/j.eswa.2024.125928</a></li>
-        <h4>2023</h4>
+           <h4>2025</h4>
+        <li class="stretch"> <b>Ghose, Partho</b>, Khondokar Oliullah, Md Kawsher Mahbub, Milon Biswas, Kazi Nur Uddin, and Hasan M. Jamil. "Explainable AI assisted heart disease diagnosis through effective feature engineering and stacked ensemble learning." Expert Systems with Applications 265 (2025): 125928. <a href="https://doi.org/10.1016/j.eswa.2024.125928">https://doi.org/10.1016/j.eswa.2024.125928</a></li>
+        <h4>2024</h4>
             <li> <b>Mazumder, L.</b>, Shahab, M., Islam, S. et al. An immunoinformatics approach to epitope-based vaccine design against PspA in Streptococcus pneumoniae. J Genet Eng Biotechnol 21, 57 (2023). <a href="https://doi.org/10.1186/s43141-023-00506-9">https://doi.org/10.1186/s43141-023-00506-9</a></li>
             <li> <b>Mazumder</b>, L., Hasan, M. R., Fatema, K., Begum, S., Azad, A. K., & Islam, M. A. (2023). Identification of B and T Cell Epitopes to Design an Epitope-Based Peptide Vaccine against the Cell Surface Binding Protein of Monkeypox Virus: An Immunoinformatics Study. Journal of Immunology Research, 2023, 1–14. <a href="https://doi.org/10.1155/2023/2274415">https://doi.org/10.1155/2023/2274415</a></li>
             <li> Nahian, M., Shahab, M., <b>Mazumder, L.</b> et al. In silico design of an epitope-based vaccine against PspC in Streptococcus pneumoniae using reverse vaccinology. J Genet Eng Biotechnol 21, 166 (2023). <a href="https://doi.org/10.1186/s43141-023-00604-8">https://doi.org/10.1186/s43141-023-00604-8</a></li>
