--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
            <li> Sharmin, Selina, Tanvir Ahammad, Md Alamin Talukder, and Partho Ghose. "A hybrid dependable deep feature extraction and ensemble-based machine learning approach for breast cancer detection." IEEE Access (2023). <a https://doi.org/10.1109/ACCESS.2023.3304628">https://doi.org/10.1109/ACCESS.2023.3304628</a></li>
            <h4>2022</h4>
            <li> <b>Ghose, Partho</b>, Muhaddid Alavi, Mehnaz Tabassum, Md Ashraf Uddin, Milon Biswas, Kawsher Mahbub, Loveleen Gaur, Saurav Mallik, and Zhongming Zhao. "Detecting COVID-19 infection status from chest X-ray and CT scan via single transfer learning-driven approach." Frontiers in Genetics 13 (2022): 980338. <a href="https://doi.org/10.3389/fgene.2022.980338">https://doi.org/10.3389/fgene.2022.980338</a></li> 
-           <li> Ghose, Partho, Md Ashraf Uddin, Uzzal Kumar Acharjee, and Selina Sharmin. "Deep viewing for the identification of Covid-19 infection status from chest X-Ray image using CNN based architecture." Intelligent systems with applications 16 (2022): 200130. <a href="https://doi.org/10.1016/j.iswa.2022.200130">https://doi.org/10.1016/j.iswa.2022.200130</a></li> 
+           <li> <b>Ghose, Partho</b>, Md Ashraf Uddin, Uzzal Kumar Acharjee, and Selina Sharmin. "Deep viewing for the identification of Covid-19 infection status from chest X-Ray image using CNN based architecture." Intelligent systems with applications 16 (2022): 200130. <a href="https://doi.org/10.1016/j.iswa.2022.200130">https://doi.org/10.1016/j.iswa.2022.200130</a></li> 
          </ul>
       </div><!-- End Section Title -->
 
@@ -286,13 +286,21 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>Conferences</h2>
          <ul id="Navigation">
-           <h4>2023</h4>
-        <li class="stretch"> <b>Mazumder, L.</b>, Islam, M. S., Begum, M., Begum, S., Akter, S. Antimicrobial Resistance Pattern of Vibrio cholerae and Vibrio parahaemolyticus Isolated from Different Drainage Systems of Biochemical and Molecular Laboratories in Dhaka City. <b>Poster presented</b> at: 36th BSM Annual Conference; January 2023; Dhaka, Bangladesh.</a></li>
-            <li> <b>Mazumder, L.</b>, Hasan, M. R., Fatema, K., Begum, S., Azad, A. K., & Islam, M. A. Identification of B and T Cell Epitopes to Design an Epitope-based Peptide Vaccine Against the Cell Surface Binding Protein of Monkeypox Virus; An Immunoinformatics Study. <b>Poster presented</b> at: 36th BSM Annual Conference; January 2023; Dhaka, Bangladesh.</a></li>
-            <li> <b>Mazumder</b>, Nahian, M., Metrika, M. A., Gulshan, R., Rahman, F., Khan, M. R., Islam, M. A., & Begum, S., Designing of Novel Epitope-Based Vaccine Candidates Against Dengue Virus Isolates from Bangladesh. <b>Poster presented</b> at: 36th BSM Annual Conference; January 2023; Dhaka, Bangladesh.</a></li>
-        <h4>2022</h4>
-           <li> <b>Mazumder</b>, Shahab, Islam, M. S., Begum, M., Begum, S., & Akter, S. An Immunoinformatics Approach to Epitope-based Vaccine Design Against PspA in Streptococcus pneumoniae. <b>Oral presentation</b> at: BCSIR Congress 2022; December 2022; Dhaka, Bangladesh.</a></li>
-           <li> Islam, M. S., <b>Mazumder, L.</b>, Begum, M., Begum, S., Akter, S. Isolation, Identification and Single Nucleotide Polymorphisms Analysis of Bacteria from Different Drainage System. <b>Poster presented</b> at: BCSIR Congress 2022; December 2022; Dhaka, Bangladesh.</a></li>
+           <h4>2024</h4>
+        <li class="stretch"> Joni, Sohel Ahmed, Rabiul Rahat, Nishat Tasnin, <b>Partho Ghose</b>, and Md Mahbub-Or-Rashid. "Grainbee: A Quantum-Resistant Blockchain-Based Ration Distribution System with Hardware Security Modules." . <b>Oral Prrsentation</b>In 2024 IEEE International Conference on Computing, Applications and Systems (COMPAS), pp. 1-6. IEEE, 2024</a></li>
+            <h4>2023</h4>
+           <li> <b>Ghose, Partho</b>, Milon Biswas, and Loveleen Gaur. "BrainSegNeT: a lightweight brain tumor segmentation model based on U-net and progressive neuron expansion."  <b>Oral presentation</b> at: In International Conference on Brain Informatics, pp. 249-260. Cham: Springer Nature Switzerland, 2023.</a></li>
+           <li> Joni, Sohel Ahmed, Rabiul Rahat, Nishat Tasnin, <b>Partho Ghose</b>, and Loveleen Gaur. "HAC-Bchain: A Secure and Scalable Blockchain-Shard Based E-Voting System." <b>Oral presented</b> at: In 2023 IEEE Technology & Engineering Management Conference-Asia Pacific (TEMSCON-ASPAC), pp. 1-6. IEEE, 2023</a></li>
+           <li> Joni, Sohel Ahmed, Rabiul Rahat, Nishat Tasnin, Partho Ghose, and Loveleen Gaur. "HAC-Bchain: A Secure and Scalable Blockchain-Shard Based E-Voting System." <b>Oral presented</b> at: In 2023 IEEE Technology & Engineering Management Conference-Asia Pacific (TEMSCON-ASPAC), pp. 1-6. IEEE, 2023</a></li>
+          <li> <b>Ghose, Partho</b>, Sohel Ahmed Joni, Rabiul Rahat, Nishat Tasnin, and Milon Biswas. "An Effective Combination of Deep and Machine Learning Models for Monkeypox Detection from Dermatographic Image."  <b>Oral presented</b> at: In International Conference on Trends in Electronics and Health Informatics, pp. 33-44. Singapore: Springer Nature Singapore, 2023.</a></li>
+         <li>Mahbub, Md Kawsher, Md Zakir Hossain Zamil, Md Abdul Mozid Miah, <b>Partho Ghose</b>, Milon Biswas, and K. C. Santosh. "Mobapp4infectiousdisease: Classify covid-19, pneumonia, and tuberculosis." <b>Oral presented</b> at: In 2022 ieee 35th international symposium on computer-based medical systems (cbms), pp. 119-124. IEEE, 2022.</a></li>
+         <li><b>Ghose, Partho</b>, Selina Sharmin, Loveleen Gaur, and Zhongming Zhao. "Grid-search integrated optimized support vector machine model for breast cancer detection." <b>Oral presented</b> at: In 2022 IEEE international conference on bioinformatics and biomedicine (BIBM), pp. 2846-2852. IEEE, 2022. </a></li>
+        <li><b>Ghose, Partho</b>, Md Ashraf Uddin, Mohammad Manzurul Islam, Manowarul Islam, and Uzzal Kumar Acharjee. "A breast cancer detection model using a tuned svm classifier."  <b>Oral presented</b> at: In 2022 25th International Conference on Computer and Information Technology (ICCIT), pp. 102-107. IEEE, 2022. </a></li>
+        <h4>2021</h4>
+            <li> Ghose, Partho, Uzzal Kumar Acharjee, Md Amirul Islam, Selina Sharmin, and Md Ashraf Uddin. "Deep viewing for Covid-19 detection from x-ray using cnn based architecture." <b>Oral Prrsentation</b> at: In 2021 8th International Conference on Electrical Engineering, Computer Science and Informatics (EECSI), pp. 283-287. IEEE, 2021. </a></li>
+            <h4>2018</h4>
+           <li> <b>Ghose, Partho</b>, Md Naimur Rahman, Md Masbaul Alam Polash, and Uzzal Kumar Acharjee. "Design of reversible shift registers minimizing number of gates, constant inputs and garbage outputs."   <b>Oral presentation</b> at: In 2018 International Conference on Advances in Computing, Communications and Informatics (ICACCI), pp. 752-758. IEEE, 2018.</a></li>
+          
          </ul>
       </div><!-- End Section Title -->
 
