--- a/index.html
+++ b/index.html
@@ -325,8 +325,8 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="210" data-purecounter-duration="1" class="purecounter"></span>
-              <p><strong>Teaching Hours</strong> <span>as a Teaching Assitant</span></p>
+              <span data-purecounter-start="0" data-purecounter-end="4600" data-purecounter-duration="1" class="purecounter"></span>
+              <p><strong>Teaching Hours</strong> <span>as a Teaching Lecturer</span></p>
             </div>
           </div><!-- End Stats Item -->
 
@@ -341,7 +341,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="148" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="around 1000" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Students</strong> <span>in total</span></p>
             </div>
           </div><!-- End Stats Item -->
@@ -349,7 +349,7 @@
           <div class="col-lg-3 col-md-6">
             <div class="stats-item">
               <i class="bi bi-headset"></i>
-              <span data-purecounter-start="0" data-purecounter-end="120" data-purecounter-duration="1" class="purecounter"></span>
+              <span data-purecounter-start="0" data-purecounter-end="690" data-purecounter-duration="1" class="purecounter"></span>
               <p><strong>Hours Of Support</strong> <span>in peron</span></p>
             </div>
           </div><!-- End Stats Item -->
@@ -597,7 +597,7 @@ research-based higher education and a career.</span>
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h3>Address</h3>
-                  <p>BSBW 412, Texas A&M University, College Station, TX 77843</p>
+                  <p>SCT 229, Texas A&M University, College Station, TX 77843</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -605,7 +605,7 @@ research-based higher education and a career.</span>
                 <i class="bi bi-telephone flex-shrink-0"></i>
                 <div>
                   <h3>Call Me</h3>
-                  <p>+1 (xxx) 263 5208</p>
+                  <p>+1 (xxx) 358 0195</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -613,7 +613,8 @@ research-based higher education and a career.</span>
                 <i class="bi bi-envelope flex-shrink-0"></i>
                 <div>
                   <h3>Email Me</h3>
-                  <p>lincon@tamu.edu</p>
+                  <p>partho.ghose@tamu.edu</p>
+                 <p>partho.ghose@agnet.tamu.edu</p>
                 </div>
               </div><!-- End Info Item -->
              
